@@ -60,12 +60,6 @@ int main(void)
 	MCUCR = (1 << IVCE);
 	MCUCR = (1 << IVSEL);
 
-	/* Hardware Initialization */
-	LEDs_Init();
-	
-	/* Indicate USB not ready */
-	UpdateStatus(Status_USBNotReady);
-	
 	/* Initialize USB Subsystem */
 	USB_Init();
 	
@@ -96,13 +90,6 @@ int main(void)
 	AppStartPtr();	
 }
 
-/** Event handler for the USB_Connect event. This indicates the presence of a USB host by the board LEDs. */
-EVENT_HANDLER(USB_Connect)
-{
-	/* Indicate USB connected */
-	UpdateStatus(Status_USBEnumerating);
-}
-
 /** Event handler for the USB_Disconnect event. This indicates that the bootloader should exit and the user
  *  application started.
  */
@@ -117,13 +104,10 @@ EVENT_HANDLER(USB_Disconnect)
  */
 EVENT_HANDLER(USB_ConfigurationChanged)
 {
-	/* Setup Keyboard Keycode Report Endpoint */
+	/* Setup HID Report Endpoint */
 	Endpoint_ConfigureEndpoint(HID_EPNUM, EP_TYPE_INTERRUPT,
-		                       ENDPOINT_DIR_OUT, HID_EPSIZE,
+		                       ENDPOINT_DIR_IN, HID_EPSIZE,
 	                           ENDPOINT_BANK_SINGLE);
-
-	/* Indicate USB connected and ready */
-	UpdateStatus(Status_USBReady);
 }
 
 /** Event handler for the USB_UnhandledControlPacket event. This is used to catch standard and class specific
@@ -188,31 +172,4 @@ EVENT_HANDLER(USB_UnhandledControlPacket)
 			
 			break;
 	}
-}
-
-/** Function to manage status updates to the user. This is done via LEDs on the given board, if available, but may be changed to
- *  log to a serial port, or anything else that is suitable for status updates.
- *
- *  \param CurrentStatus  Current status of the system, from the Keyboard_StatusCodes_t enum
- */
-static inline void UpdateStatus(uint8_t CurrentStatus)
-{
-	uint8_t LEDMask = LEDS_NO_LEDS;
-	
-	/* Set the LED mask to the appropriate LED mask based on the given status code */
-	switch (CurrentStatus)
-	{
-		case Status_USBNotReady:
-			LEDMask = (LEDS_LED1);
-			break;
-		case Status_USBEnumerating:
-			LEDMask = (LEDS_LED1 | LEDS_LED2);
-			break;
-		case Status_USBReady:
-			LEDMask = (LEDS_LED2);
-			break;
-	}
-	
-	/* Set the board LEDs to the new LED mask */
-	LEDs_SetAllLEDs(LEDMask);
 }
