@@ -31,7 +31,7 @@ PROJECT_NAME           = "LUFA Library"
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 1.5.4
+PROJECT_NUMBER         = 241208
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
