@@ -117,7 +117,7 @@
 				static void USB_Device_GetConfiguration(void);
 				static void USB_Device_GetDescriptor(void);
 				static void USB_Device_GetStatus(const uint8_t bmRequestType);
-				static void USB_Device_ClearSetFeature(const uint8_t bRequest, const uint8_t bmRequestType);
+				static void USB_Device_ClearSetFeature(const uint8_t bRequest);
 			#endif
 	#endif
 
